--- a/priv/sys.config
+++ b/priv/sys.config
@@ -17,6 +17,8 @@
             priv_key => <<"">>
           }}
        ]},
+      {salt, <<"...">>},
+      {social_fallback_url, <<"/">>},
       {social, [
         {<<"facebook">>, #{
           client_id => <<"...">>,
@@ -25,7 +27,7 @@
           scope => <<"email">>,
           authorize_uri => <<"https://www.facebook.com/dialog/oauth">>,
           token_uri => <<"https://graph.facebook.com/oauth/access_token">>,
-          callback_hooks => []
+          callbacks => [{session, social}]
         }},
         {<<"google">>, #{
           client_id => <<"...">>,
@@ -35,7 +37,7 @@
                      "https://www.googleapis.com/auth/userinfo.profile">>,
           authorize_uri => <<"https://accounts.google.com/o/oauth2/auth">>,
           token_uri => <<"https://accounts.google.com/o/oauth2/token">>,
-          callback_hooks => []
+          callbacks => [{session, social}]
         }}
       ]}
     ]},
