Done with Facebook for OAuth2.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -36,7 +36,16 @@
           scope => <<"https://www.googleapis.com/auth/userinfo.email ",
                      "https://www.googleapis.com/auth/userinfo.profile">>,
           authorize_uri => <<"https://accounts.google.com/o/oauth2/auth">>,
-          token_uri => <<"https://accounts.google.com/o/oauth2/token">>,
+          token_uri => <<"https://www.googleapis.com/oauth2/v3/token">>,
+          callbacks => [{session, social}]
+        }},
+      {<<"vk">>, #{
+          client_id => <<"...">>,
+          client_secret => <<"...">>,
+          callback_uri => <<"/oauth/vk/callback">>,
+          scope => <<"uid,first_name,last_name,sex,photo">>,
+          authorize_uri => <<"https://oauth.vk.com/authorize">>,
+          token_uri => <<"https://oauth.vk.com/access_token">>,
           callbacks => [{session, social}]
         }}
       ]}
