--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,6 @@
     {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl.git", "stable"}},
     {gun, ".*", {git, "https://github.com/ninenines/gun.git", "master"}},
     {oauth2c, ".*", {git, "https://github.com/mkrentovskiy/oauth2_client.git", "master"}},
-    {sync, ".*", {git, "https://github.com/rustyio/sync.git", "master"}}
+    {sync, ".*", {git, "https://github.com/mkrentovskiy/sync.git", "master"}}
   ]}.
 {sub_dirs, ["rel"]}.
