Look like send messages via Mailgun is worked.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -11,10 +11,11 @@
           ]}
         ]},
         {mail_sender, #{
-            domain => <<"">>,
-            from => <<"">>,
-            pub_key => <<"">>,
-            priv_key => <<"">>
+            domain => <<"localdomain">>,
+            url => <<"...">>,
+            from => <<"info@localdomain">>,
+            pub_key => <<"...">>,
+            priv_key => <<"...">>
           }}
        ]},
       {salt, <<"...">>},
