Migrate to Recaptcha2. Start working on UI.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -19,6 +19,7 @@
           }}
        ]},
       {salt, <<"...">>},
+      {recaptcha_key, <<"...">>},
       {social_fallback_url, <<"/">>},
       {social, [
         {<<"facebook">>, #{
