--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,7 @@
 {xref_checks, [undefined_function_calls]}.
 {deps, [
     {cowboy, ".*",{git, "https://github.com/ninenines/cowboy.git", "1.0.0"}},
-    {gen_leader, ".*", {git, "https://github.com/garret-smith/gen_leader_revival.git", "master"}},
-    {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
+    {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", "master"}},
     {epgsql, ".*", {git, "https://github.com/epgsql/epgsql.git", {tag, "3.1.0"}}},
     {poolboy, ".*", {git, "https://github.com/devinus/poolboy.git", {tag, "1.3.0"}}},
     {alog, ".*", {git, "https://github.com/siberian-fast-food/alogger", {tag, "4.0.5"}}},
