--- a/rebar.config
+++ b/rebar.config
@@ -2,13 +2,14 @@
 {erl_opts, [debug_info]}.
 {xref_checks, [undefined_function_calls]}.
 {deps, [
+    {edown, ".*", {git, "https://github.com/uwiger/edown.git", {tag, "0.7"}}},
     {cowboy, ".*",{git, "https://github.com/ninenines/cowboy.git", "1.0.0"}},
     {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", "master"}},
     {epgsql, ".*", {git, "https://github.com/epgsql/epgsql.git", {tag, "3.1.0"}}},
     {poolboy, ".*", {git, "https://github.com/devinus/poolboy.git", {tag, "1.3.0"}}},
     {alog, ".*", {git, "https://github.com/siberian-fast-food/alogger", {tag, "4.0.5"}}},
     {jsonx, ".*", {git, "https://github.com/mkrentovskiy/jsonx.git", "master"}},
-    {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl.git", "stable"}},
+    {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl.git", "master"}},
     {oauth2c, ".*", {git, "https://github.com/mkrentovskiy/oauth2_client.git", "master"}},
     {sync, ".*", {git, "https://github.com/mkrentovskiy/sync.git", "master"}}
   ]}.
