So much additions: - up to erlydtl templates; - update Semantic UI; - add session to WS; - add mail get from VK.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -45,7 +45,7 @@
           client_id => <<"...">>,
           client_secret => <<"...">>,
           callback_uri => <<"/oauth/vk/callback">>,
-          scope => <<"uid,first_name,last_name,sex,photo">>,
+          scope => <<"uid,first_name,last_name,sex,photo,email">>,
           authorize_uri => <<"https://oauth.vk.com/authorize">>,
           token_uri => <<"https://oauth.vk.com/access_token">>,
           callbacks => [{session, social}]
