BROKEN! Great changes: back to alogger & jsx, embeed oauth2c & restc (with rewriting), update all libs, strict tab to 2 spaces.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -52,25 +52,15 @@
         }}
       ]}
     ]},
-  {alog, [
-      {enabled_loggers, [
-          {console_log, alog_tty}
-          %, {syslog_log, alog_syslog}
-        ]},
-      %{install_error_logger_handler, false},
-
-      {flows, [
-          {{mod, ['_']}, {'=<', debug}, [
-              {{console_log, alog_tty}, alog_tty}
-              %, {{syslog_log, alog_syslog}, alog_syslog}
-            ]}
-        ]},
-
-      {alog_tty, []},
-      {alog_syslog, [
-          {ident, "alogger"},
-          {logopt, [cons, perror, pid]},
-          {facility, user}
-        ]}
-    ]} 
+  {lager, [
+    {colored, true},
+    {handlers, [
+      {lager_console_backend, [info, 
+        {lager_default_formatter, 
+          [time, " [",severity,"] ", node, " ",  module, ":", function, ":", line, " ", message, "\n"]}
+      ]},
+      {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
+      {lager_file_backend, [{file, "log/console.log"}, {level, info}]}
+    ]}
+  ]} 
 ].
