--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,20 @@
 %% -*- erlang -*-
-{erl_opts, [debug_info]}.
+{erl_opts, [
+        debug_info, 
+        warnings_as_errors,
+        warn_export_all,
+        {parse_transform, lager_transform}
+    ]}.
 {xref_checks, [undefined_function_calls]}.
 {deps, [
-    {edown, ".*", {git, "https://github.com/uwiger/edown.git", {tag, "0.7"}}},
-    {cowboy, ".*",{git, "https://github.com/ninenines/cowboy.git", "1.0.0"}},
-    {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", "master"}},
-    {epgsql, ".*", {git, "https://github.com/epgsql/epgsql.git", {tag, "3.1.0"}}},
-    {poolboy, ".*", {git, "https://github.com/devinus/poolboy.git", {tag, "1.3.0"}}},
-    {alog, ".*", {git, "https://github.com/siberian-fast-food/alogger", {tag, "4.0.5"}}},
-    {jsonx, ".*", {git, "https://github.com/mkrentovskiy/jsonx.git", "master"}},
-    {erlydtl, ".*", {git, "https://github.com/erlydtl/erlydtl.git", "master"}},
-    {oauth2c, ".*", {git, "https://github.com/mkrentovskiy/oauth2_client.git", "master"}},
-    {sync, ".*", {git, "https://github.com/mkrentovskiy/sync.git", "master"}}
+    {lager,   ".*", {git, "git://github.com/basho/lager.git", {tag, "3.1.0"}}},
+    {cowboy,  ".*", {git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
+    {gproc,   ".*", {git, "git://github.com/uwiger/gproc.git", {tag, "0.6"}}},
+    {epgsql,  ".*", {git, "git://github.com/epgsql/epgsql.git", {tag, "3.2.0"}}},
+    {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "1.5.1"}}},
+    {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "master"}},
+    {jsx,     ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "v2.8.0"}}},
+    {gun,     ".*", {git, "git://github.com/ninenines/gun.git", "master"}},
+    {sync,    ".*", {git, "git://github.com/mkrentovskiy/sync.git", "master"}}
   ]}.
 {sub_dirs, ["rel"]}.
