STILL BROKEN! Rewrite oauth2c and restc, move to maps in any cases, reformat most path of source code.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -2,13 +2,13 @@
   {wa, [
       {modules, [
         {pool, persist_pgsql, [
-          {pgdb, 2, [
-            {host, "127.0.0.1"}, 
-            {port, 5432},
-            {db, "wa"},
-            {user, "wa"},
-            {password, "wa"}
-          ]}
+          {pgdb, 2, #{
+            host => "127.0.0.1", 
+            port => 5432,
+            db => "wa",
+            user => "wa",
+            password => "wa"
+          }}
         ]},
         {mail_sender, #{
             domain => <<"localdomain">>,
