STILL BROKEN! Add PayPall API, rewrite for new syntax.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -10,13 +10,27 @@
             password => "wa"
           }}
         ]},
+        {pool, paypal_api, [
+          {paypal, 3, #{
+            server => "api-3t.sandbox.paypal.com",
+            port => 443,
+            url => "/nvp",
+            user => <<"...">>,
+            password => <<"...">>,
+            signature => <<"...">>,
+            redirect_prefix => <<"https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_express-checkout&token=">>,
+            success_url => <<"http://localhost:8080/paypal/success">>,
+            fail_url => <<"http://localhost:8080/paypal/fail">>
+          }}
+        ]},
         {mail_sender, #{
             domain => <<"localdomain">>,
             url => <<"...">>,
             from => <<"info@localdomain">>,
             pub_key => <<"...">>,
             priv_key => <<"...">>
-          }}
+          }},
+        payments
        ]},
       {salt, <<"...">>},
       {recaptcha_key, <<"...">>},
@@ -50,7 +64,8 @@
           token_uri => <<"https://oauth.vk.com/access_token">>,
           callbacks => [{session, social}]
         }}
-      ]}
+      ]},
+      {payments, #{}}
     ]},
   {lager, [
     {colored, true},
