Too many fixes, but its started.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -72,10 +72,10 @@
     {handlers, [
       {lager_console_backend, [info, 
         {lager_default_formatter, 
-          [time, " [",severity,"] ", node, " ",  module, ":", function, ":", line, " ", message, "\n"]}
+          [time, " [",severity,"] ", module, ":", function, ":", line, " ", message, "\n"]}
       ]},
-      {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
-      {lager_file_backend, [{file, "log/console.log"}, {level, info}]}
+      {lager_file_backend, [{file, "logs/error.log"}, {level, error}]},
+      {lager_file_backend, [{file, "logs/console.log"}, {level, info}]}
     ]}
   ]} 
 ].
