Too many fixes, but look like it works. Remove gun - it has collision of cowlibs, add hackney.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -12,9 +12,7 @@
         ]},
         {pool, paypal_api, [
           {paypal, 3, #{
-            server => "api-3t.sandbox.paypal.com",
-            port => 443,
-            url => "/nvp",
+            url => "https://api-3t.sandbox.paypal.com/nvp",
             user => <<"...">>,
             password => <<"...">>,
             signature => <<"...">>,
@@ -35,8 +33,8 @@
       {salt, <<"...">>},
       {recaptcha_key, <<"...">>},
       {social_fallback_url, <<"/">>},
-      {social, [
-        {<<"facebook">>, #{
+      {social, #{
+        <<"facebook">> => #{
           client_id => <<"...">>,
           client_secret => <<"...">>,
           callback_uri => <<"/oauth/facebook/callback">>,
@@ -44,8 +42,8 @@
           authorize_uri => <<"https://www.facebook.com/dialog/oauth">>,
           token_uri => <<"https://graph.facebook.com/oauth/access_token">>,
           callbacks => [{session, social}]
-        }},
-        {<<"google">>, #{
+        },
+        <<"google">> => #{
           client_id => <<"...">>,
           client_secret => <<"...">>,
           callback_uri => <<"/oauth/google/callback">>,
@@ -54,8 +52,8 @@
           authorize_uri => <<"https://accounts.google.com/o/oauth2/auth">>,
           token_uri => <<"https://www.googleapis.com/oauth2/v3/token">>,
           callbacks => [{session, social}]
-        }},
-      {<<"vk">>, #{
+        },
+        <<"vk">> => #{
           client_id => <<"...">>,
           client_secret => <<"...">>,
           callback_uri => <<"/oauth/vk/callback">>,
@@ -63,8 +61,8 @@
           authorize_uri => <<"https://oauth.vk.com/authorize">>,
           token_uri => <<"https://oauth.vk.com/access_token">>,
           callbacks => [{session, social}]
-        }}
-      ]},
+        }
+      }},
       {payments, #{}}
     ]},
   {lager, [
