--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "1.5.1"}}},
     {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "master"}},
     {jsx,     ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "v2.8.0"}}},
-    {gun,     ".*", {git, "git://github.com/ninenines/gun.git", "master"}},
+    {hackney, ".*", {git, "git://github.com/benoitc/hackney.git", {tag, "1.6.0"}}},
     {sync,    ".*", {git, "git://github.com/mkrentovskiy/sync.git", "master"}}
   ]}.
 {sub_dirs, ["rel"]}.
