Add SMTP method for mail sends.

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,6 @@
 %% -*- erlang -*-
 {erl_opts, [
         debug_info, 
-        warnings_as_errors,
-        warn_export_all,
         {parse_transform, lager_transform}
     ]}.
 {xref_checks, [undefined_function_calls]}.
@@ -15,6 +13,7 @@
     {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "master"}},
     {jsx,     ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "v2.8.0"}}},
     {hackney, ".*", {git, "git://github.com/benoitc/hackney.git", {tag, "1.6.0"}}},
+    {gen_smtp,".*", {git, "https://github.com/Vagabond/gen_smtp.git", {tag, "0.10.0"}}},
     {sync,    ".*", {git, "git://github.com/mkrentovskiy/sync.git", "master"}}
   ]}.
 {sub_dirs, ["rel"]}.
