--- a/priv/sys.config
+++ b/priv/sys.config
@@ -23,10 +23,19 @@
         ]},
         {mail_sender, #{
             domain => <<"localdomain">>,
-            url => <<"...">>,
             from => <<"info@localdomain">>,
-            pub_key => <<"...">>,
-            priv_key => <<"...">>
+            method => mailgun,
+            options => #{
+              url => "...",
+              pub_key => <<"...">>,
+              priv_key => <<"...">>
+            }
+            % method => smtp,
+            % options =>  #{
+            %    relay => "smtp.gmail.com", 
+            %    username => "me@gmail.com", 
+            %    password => "mypassword"
+            %  }
           }},
         payments
        ]},
@@ -72,8 +81,8 @@
         {lager_default_formatter, 
           [time, " [",severity,"] ", module, ":", function, ":", line, " ", message, "\n"]}
       ]},
-      {lager_file_backend, [{file, "logs/error.log"}, {level, error}]},
-      {lager_file_backend, [{file, "logs/console.log"}, {level, info}]}
+      {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
+      {lager_file_backend, [{file, "log/console.log"}, {level, info}]}
     ]}
   ]} 
 ].
