Move all configuration to sys.config. Correct README.

--- a/priv/sys.config
+++ b/priv/sys.config
@@ -40,7 +40,13 @@
         payments
        ]},
       {salt, <<"...">>},
-      {recaptcha_key, <<"...">>},
+      {recaptcha, #{
+          public => <<"...">>,
+          private => <<"...">>
+        }},
+      {dadata, #{
+          key => <<"...">>
+        }},
       {social_fallback_url, <<"/">>},
       {social, #{
         <<"facebook">> => #{
