--- a/priv/sys.config
+++ b/priv/sys.config
@@ -10,6 +10,14 @@
             password => "wa"
           }}
         ]},
+        {pool, persist_redis, [
+          {cache, 2, #{
+            % host => "127.0.0.1", 
+            % port => 5432,
+            % db => "wa",
+            % password => "wa"
+          }}
+        ]},
         {pool, paypal_api, [
           {paypal, 3, #{
             url => "https://api-3t.sandbox.paypal.com/nvp",
