--- a/rebar.config
+++ b/rebar.config
@@ -9,6 +9,7 @@
     {cowboy,  ".*", {git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.4"}}},
     {gproc,   ".*", {git, "git://github.com/uwiger/gproc.git", {tag, "0.6"}}},
     {epgsql,  ".*", {git, "git://github.com/epgsql/epgsql.git", {tag, "3.2.0"}}},
+    {eredis,  ".*", {git, "git://github.com/wooga/eredis.git", {tag, "v1.0.8"}}},
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "1.5.1"}}},
     {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "master"}},
     {jsx,     ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "v2.8.0"}}},
